--- a/index.css
+++ b/index.css
@@ -1,23 +1,33 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #f8f8f8;
+    min-height: 100vh; 
 }
 
 header {
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 1em;
+    padding: 1.5em;
     width: 100%;
 }
 
+#proyectos img {
+    width: 100%; 
+    height: auto; 
+    margin: 10px 0; 
+}
+
+
+
 nav {
     background-color: #eee;
-    padding: 1em;
+    padding: 1em 0;
     width: 100%;
 }
 
@@ -29,43 +39,42 @@ nav ul {
 }
 
 nav li {
-    display: inline;
-    margin-right: 10px;
+    display: inline-block;
+    margin-right: 15px;
 }
 
 nav a {
     text-decoration: none;
+    color: #555;
+    font-weight: bold;
+    font-size: 16px;
+    transition: color 0.3s ease;
+}
+
+nav a:hover {
     color: #333;
 }
 
+
 section {
-    margin: 80px 20px; /* Ajusta el margen superior para dejar espacio para la barra de encabezado */
+    margin: 50px 20px;
     max-width: 800px;
     width: 100%;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Ajuste para evitar que el footer tape la última sección */
+section:last-child {
+    margin-bottom: 100px; /* Puedes ajustar este valor según sea necesario */
 }
 
 footer {
-    color: #333;
+    color: #555;
     text-align: center;
-    padding: 1em;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+    padding: 1.5em;
     width: 100%;
-    margin: 0;
-}
-
-#curriculum {
-    text-align: center;
-    margin: 20px;
-}
-
-#curriculum a {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #333;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-    margin-top: 10px;
+    background-color: #eee;
 }
